cert-manager/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: rafay-qe-app
spec:
  tls:
  - hosts:
    - rafay-qe.com
    secretName: rafay-selfsigned-tls
  rules:
  - host: rafay-qe.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: rafay-qe-service
            port: 
              number: 80
